--- a/output_tests/protocol_translate.ipynb
+++ b/output_tests/protocol_translate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def keyword(protocol) :\n",
+    "def keyword_check(protocol) :\n",
     "    #OVERとSKIPを確認\n",
     "    if protocol == \"OVER\" :\n",
     "        return \"OVER\"\n",
@@ -45,45 +45,128 @@
     "    \n",
     "    #動詞・文構造を確定させる\n",
     "    else :\n",
+    "        a = None\n",
     "        for i in keywords:\n",
-    "            if i == protocol.split()[0]:\n",
-    "                return i\n",
-    "            elif i == protocol.split()[1]:\n",
-    "                return i\n",
+    "            if i in [protocol.split()[0], protocol.split()[1]]:\n",
+    "                a = i\n",
     "            else:\n",
-    "                return None\n",
-    "            \n",
+    "                pass\n",
+    "        return a\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def first_translate(protocol):    #プロトコル文を最初の短い文章に翻訳する関数\n",
-    "    keyword = keyword(protocol)\n",
     "    \n",
-    "    if keyword == \"OVER\" or \"SKIP\":\n",
+    "    keyword = keyword_check(protocol)\n",
+    "    \n",
+    "    if keyword == \"OVER\" or keyword == \"SKIP\":\n",
     "        return keyword\n",
     "    \n",
     "    elif keyword in verbs:  #一般動詞の場合\n",
     "        if protocol.split()[0] == keyword: #主語なし\n",
     "            if keyword == \"ESTIMATE\":\n",
-    "                return f\"I think {protocol.split()[1]} is the {protocol.split()[2]}\"\n",
+    "                return f\"I think {protocol.split()[1]} is the {protocol.split()[2]}.\"\n",
     "            elif keyword == \"COMINGOUT\":\n",
-    "                return f\"I am the {protocol.split()[1]}\"\n",
+    "                return f\"I am the {protocol.split()[1]}.\"\n",
     "            elif keyword == \"DIVINATION\":\n",
-    "                \n",
-    "         \n",
+    "                return f\"I will divine {protocol.split()[1]} tonight. \"\n",
+    "            elif keyword == \"GUARD\":\n",
+    "                return f\"I'm going to guard {protocol.split()[1]} from werewolf.\"\n",
+    "            elif keyword == \"VOTE\":\n",
+    "                return f\"I'm going to vote {protocol.split()[1]} today.\"\n",
+    "            elif keyword == \"ATTACK\":\n",
+    "                return f\"I will kill {protocol.split()[1]} tonight.\"\n",
+    "            elif keyword == \"DIVINED\":\n",
+    "                return f\"I divined {protocol.split()[1]} last night and he was the {protocol.split()[2]}.\"\n",
+    "            elif keyword == \"IDENTIFIED\" :\n",
+    "                return f\"I identified {protocol.split()[1]} last night and he was the {protocol.split()[2]}.\"\n",
+    "            elif keyword == \"GUARDED\":\n",
+    "                return f\"I guaded {protocol.split()[1]} from werewolf last night.\"\n",
+    "            elif keyword == \"VOTED\":\n",
+    "                return f\"I voted {protocol.split()[1]} yesterday.\"\n",
+    "            elif keyword == \"ATTACKED\":\n",
+    "                return f\"I attacked {protocol.split()[1]} last night.\"\n",
+    "            else :\n",
+    "                return None\n",
+    "        \n",
+    "        elif protocol.split()[1] == keyword :\n",
+    "            if keyword == \"ESTIMATE\":\n",
+    "                return f\"I think {protocol.split()[2]} is the {protocol.split()[3]}.\"\n",
+    "            elif keyword == \"COMINGOUT\":\n",
+    "                return f\"I am the {protocol.split()[2]}.\"\n",
+    "            elif keyword == \"DIVINATION\":\n",
+    "                return f\"I will divine {protocol.split()[2]} tonight. \"\n",
+    "            elif keyword == \"GUARD\":\n",
+    "                return f\"I'm going to guard {protocol.split()[2]} from werewolf.\"\n",
+    "            elif keyword == \"VOTE\":\n",
+    "                return f\"I'm going to vote {protocol.split()[2]} today.\"\n",
+    "            elif keyword == \"ATTACK\":\n",
+    "                return f\"I will kill {protocol.split()[2]} tonight.\"\n",
+    "            elif keyword == \"DIVINED\":\n",
+    "                return f\"I divined {protocol.split()[2]} last night and he was the {protocol.split()[3]}.\"\n",
+    "            elif keyword == \"IDENTIFIED\" :\n",
+    "                return f\"I identified {protocol.split()[2]} last night and he was the {protocol.split()[3]}.\"\n",
+    "            elif keyword == \"GUARDED\":\n",
+    "                return f\"I guaded {protocol.split()[2]} from werewolf last night.\"\n",
+    "            elif keyword == \"VOTED\":\n",
+    "                return f\"I voted {protocol.split()[2]} yesterday.\"\n",
+    "            elif keyword == \"ATTACKED\":\n",
+    "                return f\"I attacked {protocol.split()[2]} last night.\"\n",
+    "            else :\n",
+    "                return None\n",
     "            \n",
-    "\n",
-    "               \n",
+    "    elif keyword == \"REQUEST\":\n",
+    "        if protocol.split()[2] == \"(DIVINATION\":\n",
+    "            return f\"I want {protocol.split()[1]} to divine {protocol.split()[3]}.\"\n",
+    "        elif protocol.split()[2] == \"(GUARD\":\n",
+    "            return f\"I want {protocol.split()[1]} to guard {protocol.split()[3]} tonight.\"\n",
+    "        elif protocol.split()[2] == \"(VOTE\":\n",
+    "            return f\"I want {protocol.split()[1]} to vote {protocol.split()[3]} tonight.\"\n",
+    "        elif protocol.split()[2] == \"(ATTACK\":\n",
+    "            return f\"I want {protocol.split()[1]} to assault {protocol.split()[3]} tonight.\"\n",
+    "        elif protocol.split()[2] == \"(ESTIMATE\":\n",
+    "            return f\"I want {protocol.split()[1]} to consider that {protocol.split()[3]} is the {protocol.split()[4]}.\"\n",
+    "        elif protocol.split()[2] == \"(COMINGOUT\" and not protocol.split()[4] == \"ANY)\" :\n",
+    "            return f\"I want {protocol.split()[1]} to coming out to be {protocol.split()[3]}.\"\n",
+    "        elif protocol.split()[2] == \"(COMINGOUT\" and protocol.split()[4] == \"ANY)\" :\n",
+    "            return f\"I want {protocol.split()[1]} to coming out your job now.\"\n",
+    "        else: \n",
+    "            return None\n",
     "    \n",
+    "    elif keyword == \"INQUIRE\":\n",
+    "        return f\"Hey {protocol.split()[1]}, I'm curious about {protocol.split()[2:]}.\"\n",
     "    \n",
+    "    else: #ANDなどの演算子はだるいので一旦保留\n",
+    "        return None\n",
     "    \n",
-    "    \n",
-    "    "
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ESTIMATE\n",
+      "I want Agent[04] to divine Agent[01]).\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(keyword_check(\"ESTIMATE A B\"))\n",
+    "print(first_translate(protocol))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,8 +175,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
