--- a/output_tests/test.ipynb
+++ b/output_tests/test.ipynb
@@ -66,7 +66,7 @@
     "  messages=[\n",
     "    {\n",
     "      \"role\": \"system\", \n",
-    "      \"content\": \"You are a player in a werewolf game. One [protocol sentence] is given to you, and what you should do is to translate the protocol sentence to output natural spoken language in Japanese.\"\n",
+    "      \"content\": \"あなたは、人狼ゲームの参加者です。[protocol sentence], and what you should do is to translate the protocol sentence to output natural spoken language in Japanese.\"\n",
     "    },\n",
     "    \n",
     "    {\n",
