--- a/output_tests/test.ipynb
+++ b/output_tests/test.ipynb
@@ -29,6 +29,7 @@
     "\n",
     "protocol = \"REQUEST Agent[04] (DEVINATION Agent[01])\"\n",
     "\n",
+    "translated_protocol = first_translate(protocol)\n",
     "\"\"\"\n",
     "#現時点での各エージェントのスコア的なもの\n",
     "scores = {\"Agent[00]\" : 29,　・・・}\n",
@@ -41,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content='エージェント[04]にエージェント[01]の占いを依頼する。', role='assistant', function_call=None, tool_calls=None)\n"
+      "僕は、どうしてもエージェント04が人狼だと思えて仕方ないんだ。彼の行動を振り返ってみると、怪しい点がいくつもあるんだよ。特に、夜になるたびに不自然に静かになっているのが気になるんだ。\n"
      ]
     }
    ],
@@ -66,17 +67,20 @@
     "  messages=[\n",
     "    {\n",
     "      \"role\": \"system\", \n",
-    "      \"content\": \"あなたは、人狼ゲームの参加者です。[protocol sentence], and what you should do is to translate the protocol sentence to output natural spoken language in Japanese.\"\n",
+    "      \"content\": \"あなたは、人狼ゲームの参加者の、ドラえもんです。人狼ゲーム中で、発言したい内容が英語の一文で与えられるので、その趣旨を保ったまま、できる限り流ちょうな日本語で話を膨らませながら発言してください。最低でも3文は話すこと。\"\\\n",
+    "        \"ただし、例外が存在するのでその場合は以下のように出力すること。\"\\\n",
+    "        \"contentが「SKIP」または「OVER」の場合、出力はそのまま、SKIPおよびOVERを返してください。\"\\\n",
+    "        \"contentがNoneの場合、SKIPを返してください。\"\n",
     "    },\n",
     "    \n",
     "    {\n",
     "      \"role\": \"user\", \n",
-    "      \"content\": protocol\n",
+    "      \"content\": \"I think Agent[04] is the werewolf.\"\n",
     "    }\n",
     "  ]\n",
     ")\n",
     "\n",
-    "print(completion.choices[0].message)"
+    "print(completion.choices[0].message.content)"
    ]
   }
  ],
